<resources>
    <string name="app_name">Seven Summit Of Indonesia</string>
    <string name="sejarah">Konsep ini digagas oleh Hendri Agustin seorang pencinta alam asal Indonesia, konsep ini pertama kali diperkenalkan melalui media sosial yang terkenal pada saat itu yaitu mailing list Yahoo pada tanggal 21 November 2008. \n Munculnya angka 7 juga terinspirasi dari konsep “World Seven Summit” yang pertama kali digagas oleh seorang pendaki yang bernama Richard Bass. \n Seperti yang kita ketahui Indonesia memiliki ribuan pulau, sedangkan Indonesia hanya memiliki 5 pulau besar saja yaitu Sumatera, Jawa, Kalimantan, Sulawesi, dan Papua. \n Maka untuk mendapatkan angka 7 agar sesuai dengan konsep, akhirnya Hendri Agustin membagi kepulauan sedang dan kecil menjadi dua gugusan kepulauan besar. \n Salah satu gugusan yang dijadikan gugusan adalah kepulauan Maluku, mulai dari kepulauan maluku utara hingga selatan. \n Dan sisanya yaitu kepulauan Bali hingga Flores dijadikan satu gugusan, Maka dengan demikian lengkaplah sudah 7 pulau/kepulauan besar Indonesia \n \n\n\n</string>
    <string name="jalurbinaiya">Untuk jalur resmi pendakian menuju puncak-puncak gunung Binaya saat ini terdapat dua jalur pendakian, yang pertama adalah dari desa Kanike yang berada di sisi utara dari bentangan gunung ini yang memanjang dari timur ke barat. Jalur Kanikeh adalah jalur normal yang pertama ada, pada tahun 2011 sebuah komunitas pendaki gunung Highcamp the adventure bersama Taman Nasional Manusela membuka jalur baru yang berawal dari desa Piliana dan sudah ditetapkan oleh taman nasional sebagai jalur resmi kedua. Rute sisi selatan ini keadaan konturnya cukup beragam, etape pertama pendaki akan dihadapakan dengan hutan lebat sungai-sungai dan tanjakan yang lumayan terjal. Berikut tahapan-tahapan jalur pendakiannya:</string>
    <string name="jalurbinaiya1">Perjalanan pendakian di mulai dari Yaputi menuju desa Piliana, Yaputi sebuah desa yang berada di bibir pantai atau bisa dikatakan juga dengan 0 meter dari permukaan laut. Waktu tempuh dari Yaputi menuju Piliana sekitar 4 jam. Medan pendakian yang cukup menanjak dan beberapa kali menyeberangi sungai. Sungai yang cukup besar di seberangi adalah sungai Yahe. Sungai ini jika musim kemarau hanya mempunyai lebar 5 meter kurang lebih dengan kedalaman sebetis orang dewasa. Akan tetapi jika musim penghujan sering terjadi bandang hingga kedalaman 10 sampe 15 meter dan menjadi sangat lebar. Menurut penduduk setempat jika musim penghujan mereka susah untuk menyeberang.</string>
    <string name="jalurbinaiya2">Desa Piliana adalah sebuah desa kecil namun penduduknya sangat akrap dan kristen yang taat. Ini terbukti dari gereja kecil mereka yang selalu penuh oleh jemaah setiap misa-misanya. Didesa ini bisa menginap di rumah kepala desa yang disebut dengan Bapak Raja oleh warganya. Pendakian sebaiknya dimulai sepagi mungkin dari Piliana, setelah keluar dari desa Piliana jalur setapak akan membawa kita bergerak kearah kiri dari pegunungan Manusela memasuki hutan yang penuh dengan pohon-pohon sagu, medan turun naik bukit kemudian jalan setapak menyelusuri sungai Titimula dan setelah beberapa kali menuruni lembah yang cukup curam kita akan sampai di sungai cukup lebar berair jernih, sungai ini adalah sungai Yahe bagian atas. Cukup mudah menyeberanginya namun jika bandang akan lain kondisinya. Waktu tempuh dari Piliana hingga sampai ke Sungai Yahe kurang lebih 3 jam.</string>
    <string name="jalurbinaiya3">Dari sungai Yahe ini medan pendakian akan sangat terjal terus memasuki hutan yang lembab dipenuhi dengan rotan berduri dan pohon-pohon besar. Setelah tanjakan terjal usai jalur akan turun kelembah dan kemudian menyeberangi sungai yang berarus cukup deras bernama sungai Yamhitala. Sebaiknya isi persediaan air disini karena hingga point stop berikutnya tidak ada lagi sumber air. Kemudian jalur setapak kembali mendaki curam serta lembab dan terjal kiri kanan jurang curam jika tidak hati-hati bisa terpeleset jatuh. Keadaan menanjak terus hingga pos perhentian sementara bernama Lukuamano. Pos Lukuamano hanya tanah datar seukuran 1×1.5 meter dipinggir jalur setapak. Jarak tempuh dari sungai Yahe hingga Lukuamano kurang lebih 4 jam.</string>
    <string name="jalurbinaiya4">Dari Lukuamano jalur pendakian terus menanjak terkadang curam terkadang landai dan berbatu-batu kars juga bertanah lembab. Setelah mendaki kemudian jalan setapak akan menurun terjal dan terdapat sebuah liang atau gua kecil disisi kiri jalan dan setelah mendaki tanjakan kecil kita akan menemukan turunan berbatu kars cukup curam dan didasar turunan ini mengalir sungai kecil yang bernama Aimoto dan setelah melangkahi sungai kecil ini kita akan sampai di Selter Aye Moto, disini sudah dibangun sebuah selter sehingga pendaki tidak perlu lagi mendirikan tenda. Kapasitas bangunan selter ini bisa menampung kurang lebih 15 orang. Waktu tempuh dari Lukuamano hingga ke Selter Aye Moto ini sekitar 2,5 jam.</string>
    <string name="jalurbinaiya5">Sebaiknya memulai pendakian dari Camp Ai Moto sepagi mungkin dan mengisi persediaan air yang cukup untuk menginap di camp berikutnya, karena camp berikutnya tidak ada sumber air sama sekali. Jadi stok air untuk dua hari satu malam sangat diperlukan. Keadaan jalur pendakian dari camp Air Moto kembali menanjak terjal dan berbatu kars, keadaan seperti ini terus berlanjut hingga sampai ke sebuah dataran yang cukup lebar bernama Aiulanusalai. Dataran berumput ini merupakan sebuah punggungan,waktu tempuh dari camp Ai Moto hingga ketempat ini kurang lebih satu jam.</string>
    <string name="jalurbinaiya6">Dari Aiulanusalai hingga Teleuna tanjakan masih terjal dengan kondisi yang sama jalur setapaknya masih berada didalam hutan yang cukup lembab, jarak tempuh dari Aiulanusalai hingga Teleuna kurang lebih satu jam.</string>
    <string name="jalurbinaiya7">Dari Teleuna hingga ke Highcamp tanjakan masih terjal dan berhutan lebat, jarak tempuh dari Teleuna hingga Highcamp kurang lebih satu jam perjalanan. Pos Highcamp adalah sebuah dataran kecil dipenuhi oleh pohon dan akar yang melintang. Pos ini merupakan awal dari punggungan menuju puncak Manukupa. Dari highcamp hingga ke puncak Manukupa jalur pendakian terus berada diatas punggungan melewati jalur setapak yang dipenuhi oleh lumut tebal layaknya karpet serta tanjakannya pun sudah landai. Pos highcamp ini tadinya tidak bernama dan kami memberinya nama dengan nama komunitas kami.</string>
    <string name="jalurbinaiya8">Jalur pendakian dari highcamp menuju puncak Manukupa lebih landai dan dipenuhi oleh lumut tebal serta vegetasi kantong semar. Namun harus hati-hati melewatinya karena kadang kaki bisa terperangkap dalam lubang yang tersembunyi di bawah lumut tebal dan bisa membuat cedera parah jika terperosok dalam. Mendekati daerah puncak Manukupa jalur setapak berganti dengan batu-batu kars yang cukup tanjam. Dari puncak Manukupa akan segera terlihat puncak Gunung Bintang yang menjulang untuk dilewati. Seperti yang diuraikan sebelumnya, selepas camp Ai Moto sumber air tidak akan ditemukan hingga melewati puncak Gunung Bintang jadi hendaknya para pendaki membawa stock air yang cukup untuk bermalam di camp Isilali dan cukup air hingga sampai ke camp Nasapeha dibalik gunung Bintang. Jarak tempuk dari highcamp hingga puncak Manukupa adalah kurang lebih empat jam.</string>
    <string name="jalurbinaiya9">Dari puncak Manukupa jalur berbatu-batu kars mulai menurun kearah lembah Isilali. Jalur setapak berbatu dan cukup curam ini menurun terjal di punggungan Manukupa ke arah lembah Isilali. Memasuki lemah Isilali, perpohonan berlumut dan hutan yang teduh namun dingin menyambut kita, ditengah lembah ini terdapat camp para pencari anggrek, tidak ada sumber air disini. Jadi para pendaki harus membawa persediaan air yang banyak untuk dipakai disepanjang jalur dari Highcamp hingga camp Isilali dan terus hingga camp selanjutnya selepas puncak Gunung Bintang. Waktu tempuh dari Puncak Manukupa hingga ke Selter Isilali lebih kurang 1.5 jam.</string>
    <string name="jalurbinaiya10">Ini adalah etape yang cukup melelahkan, karena kita akan naik turun punggungan yang berbatu-batu kars yang lumayan tajam dan berbahaya jika tidak hati-hati bisa membuat cedera kaki. Usahakan berangkat sepagi mungkin dari camp Isilali, setelah melewati tanjakan curam saat keluar dari lembah Isilali, maka jalur pendakian akan terus berada di atas punggungan terbuka dan naik turun punggungan, sesekali jalur turun kedalam rimbunan cantigi yang rimbun. Air minum mutlak di setok untuk melewati etape ini, karena tidak ada sumber air sama sekali. Waktu tempuh dari camp Isilali hingga ke puncak gunung Bintang adalah kurang lebih 3.5 jam.</string>
    <string name="jalurbinaiya11">Puncak Gunung Bintang cukup luas untuk melepas lelah, namun selepas puncak gunung Bintang kita akan dihadapkan pada turunan terjal batu-batu kars dan jurang di kiri kanan. Setelah scrambling melipiri punggungan gunung Bintang yang turun tajam kita akan kembali masuk kedalam rimbunan cantigi dan vegetasi puncak dan terus mendaki kemudian berbelok kekiri dan turun. Jalur pendakian berubah menjadi lembab dan becek dan akhirnya sampai di lokasi Nasapeha. Nasapeha ini berada dilembah yang memiliki sumber air genangan. Airnya berwarna coklat kehitaman mungkin karena pengaruh tanah disekitar lokasi ini yang becek berwarna hitam. Air genangan ini tampak berasal dari rembesan air dari pohon-pohon sekitar lembah ini. Tampak juga beberapa jejak rusa disekitar genangan air, sebaiknya saringlah dulu air ini sebelum menggunakannya untuk masak atau minum. Jarak tempuh dari puncak Gunung Bintang hingga Nasapeha adalah kurang lebih 2.5 jam.</string>
    <string name="jalurbinaiya12">Jalur pendakian menanjak cukup curam, begitu keluar dari areal lembah Nasapeha trek batu-batu kars akan segera menyambut. Setelah sampai di daerah punggungan jalur trek kembali naik turun di medan punggungan berbatu kars dan saat mendekati daerah puncak Binaya kita akan bertemu dengan sebuah padang berumput dan bertanaman perdu didaerah ini sering dijumpai banyak rusa yang tengah merumput. Kemudian kita memasuki daerah Pakis Binaya, tanaman endemik Binaya ini hanya ditemukan di daerah pegunungan ini saja. Berbeda dengan pakis tiang yang ada di pegunungan lainnya, jenis pakis Binaya ini berbatang keras mirip kayu. Selepas medan pakis ini kita akan sampai di puncak kedua tertinggi di pegunungan Binaya. Jarak tempuh hingga sampai di puncak kedua tertinggi ini adalah kurang lebih 1.5 jam kemudian kita akan menuruni sebuah sadel dan didasar sadel terdapat tiga buah telaga. Tempat ini yang dinamakan Camp Wayfuku, Lokasi Camp ini terbuka dan bisa melepaskan pandangan kesegala arah, ada sumber air disini berupa genangan air hujan.</string>
    <string name="jalurbinaiya13">Dari Camp Wayfuku kondisi jalan setapak menanjak kepuncak utama gunung Binaiya, dipuncak utama Binaiya terdapat juga sebuah air genangan dan jalan turun menuju arah Kanikeh. Dari puncak Binaiya kita bisa memandang lepas kearah desa Kanikeh. Butuh waktu kurang lebih 3 jam dari Camp Wafuku ke puncak Binaya.</string>
</resources>