<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context="com.aradea.informasi.sevensummitindonesia.jalurbinaiya">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Jalur Pendakian"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Yaputi – Paliana."
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya1"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Desa Piliana – Sungai Yahe Atas."
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya2"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Sungai Yahe atas – Lukuamano."
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya3"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Lukuamano – Selter Aye Moto."
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya4"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Selter Aye Moto – Aiulanusalai."
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya5"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Aiulanusalai – Teleuna."
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya6"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Teleuna – Highcamp."
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya7"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Highcamp – Puncak Manukupa."
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya8"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Puncak Manukupa – Camp Isilali."
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya9"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Camp Isilali – Puncak Gunung Bintang."
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya10"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Puncak gunung Bintang – Nasapeha."
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya11"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Nasapeha – Camp Wayfuku."
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya12"
                android:textAlignment="textStart" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="2.83" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="Etape Camp Wayfuku – Puncak Binaya."
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.83"
                android:text="@string/jalurbinaiya13"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

</android.support.v7.widget.LinearLayoutCompat>
